--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="/RPS-img/Oncoming_Fist_Emoji.png" alt="Rock" width="130px" onclick="rockImg()">
-        <img src="/RPS-img/Raised_Hand_Emoji.png" alt="Paper" width="130px"  onclick="paperImg()">
-        <img src="/RPS-img/Victory_Hand_Emoji.png" alt="Scissor" width="130px"  onclick="scissorImg()">
+        <img src="Oncoming_Fist_Emoji.png" alt="Rock" width="130px" onclick="rockImg()">
+        <img src="Raised_Hand_Emoji.png" alt="Paper" width="130px"  onclick="paperImg()">
+        <img src="Victory_Hand_Emoji.png" alt="Scissor" width="130px"  onclick="scissorImg()">
          <p id="result"></p>
     </div>
 
